accelerated-domains: add huaweicloudsite.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42107,6 +42107,7 @@ server=/huaweicloud-smn.com/114.114.114.114
 server=/huaweicloud-smn.net/114.114.114.114
 server=/huaweicloud.com/114.114.114.114
 server=/huaweicloudapis.com/114.114.114.114
+server=/huaweicloudsite.com/114.114.114.114
 server=/huaweicloudwaf.com/114.114.114.114
 server=/huaweidevice.com/114.114.114.114
 server=/huaweidun.com/114.114.114.114
