accelerated-domains: add huaweiief.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42111,6 +42111,7 @@ server=/huaweicloudsite.com/114.114.114.114
 server=/huaweicloudwaf.com/114.114.114.114
 server=/huaweidevice.com/114.114.114.114
 server=/huaweidun.com/114.114.114.114
+server=/huaweiief.com/114.114.114.114
 server=/huaweiita.com/114.114.114.114
 server=/huaweimall.com/114.114.114.114
 server=/huaweimarine.com/114.114.114.114
