--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42113,6 +42113,7 @@ server=/huaweidevice.com/114.114.114.114
 server=/huaweidun.com/114.114.114.114
 server=/huaweiief.com/114.114.114.114
 server=/huaweiita.com/114.114.114.114
+server=/huaweils.com/114.114.114.114
 server=/huaweimall.com/114.114.114.114
 server=/huaweimarine.com/114.114.114.114
 server=/huaweimossel.com/114.114.114.114
