accelerated-domains: add huaweimarketplace.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42116,6 +42116,7 @@ server=/huaweiita.com/114.114.114.114
 server=/huaweils.com/114.114.114.114
 server=/huaweimall.com/114.114.114.114
 server=/huaweimarine.com/114.114.114.114
+server=/huaweimarketplace.com/114.114.114.114
 server=/huaweimossel.com/114.114.114.114
 server=/huaweisafedns.com/114.114.114.114
 server=/huaweisre.com/114.114.114.114
