accelerated-domains: add huaweioneaccess.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42118,6 +42118,7 @@ server=/huaweimall.com/114.114.114.114
 server=/huaweimarine.com/114.114.114.114
 server=/huaweimarketplace.com/114.114.114.114
 server=/huaweimossel.com/114.114.114.114
+server=/huaweioneaccess.com/114.114.114.114
 server=/huaweisafedns.com/114.114.114.114
 server=/huaweisre.com/114.114.114.114
 server=/huaweistatic.com/114.114.114.114
