accelerated-domains: add huaweishop.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42121,6 +42121,7 @@ server=/huaweimossel.com/114.114.114.114
 server=/huaweioneaccess.com/114.114.114.114
 server=/huaweirtc.com/114.114.114.114
 server=/huaweisafedns.com/114.114.114.114
+server=/huaweishop.net/114.114.114.114
 server=/huaweisre.com/114.114.114.114
 server=/huaweistatic.com/114.114.114.114
 server=/huaweiuniversity.com/114.114.114.114
