--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42125,6 +42125,7 @@ server=/huaweishop.net/114.114.114.114
 server=/huaweisre.com/114.114.114.114
 server=/huaweistatic.com/114.114.114.114
 server=/huaweiuniversity.com/114.114.114.114
+server=/huaweiyun.com/114.114.114.114
 server=/huaweizdl.com/114.114.114.114
 server=/huawenfanyi.com/114.114.114.114
 server=/huawenwin.com/114.114.114.114
