accelerated-domains: add huifuhuo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42321,6 +42321,7 @@ server=/huifengxinxi.com/114.114.114.114
 server=/huifenqi.com/114.114.114.114
 server=/huifu.com/114.114.114.114
 server=/huifudashi.com/114.114.114.114
+server=/huifuhuo.com/114.114.114.114
 server=/huifusihai.com/114.114.114.114
 server=/huifutz.com/114.114.114.114
 server=/huifuzhinan.com/114.114.114.114
