--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42444,6 +42444,7 @@ server=/huitogou.com/114.114.114.114
 server=/huitongqingsuan.com/114.114.114.114
 server=/huitoubj.com/114.114.114.114
 server=/huitouche.com/114.114.114.114
+server=/huitoukao.com/114.114.114.114
 server=/huitouyan.com/114.114.114.114
 server=/huitouyu.com/114.114.114.114
 server=/huitouzi.com/114.114.114.114
