accelerated-domains: add huiyanzhi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42474,6 +42474,7 @@ server=/huixuanjiasu.com/114.114.114.114
 server=/huixueba.net/114.114.114.114
 server=/huiyan315.com/114.114.114.114
 server=/huiyankan.com/114.114.114.114
+server=/huiyanzhi.com/114.114.114.114
 server=/huiyaohuyu.com/114.114.114.114
 server=/huiybb.com/114.114.114.114
 server=/huiyda.com/114.114.114.114
