--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42503,6 +42503,7 @@ server=/huiyunsec.xyz/114.114.114.114
 server=/huiyutools.com/114.114.114.114
 server=/huize.com/114.114.114.114
 server=/huizecdn.com/114.114.114.114
+server=/huizeyoupin.com/114.114.114.114
 server=/huizhaofang.com/114.114.114.114
 server=/huizhek.com/114.114.114.114
 server=/huizhengmopei.com/114.114.114.114
