--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42524,6 +42524,7 @@ server=/hujingnb.com/114.114.114.114
 server=/hujinjj.com/114.114.114.114
 server=/huke88.com/114.114.114.114
 server=/hukeck.com/114.114.114.114
+server=/hukecs.com/114.114.114.114
 server=/hukecwx.com/114.114.114.114
 server=/hukelc.com/114.114.114.114
 server=/hukenb.com/114.114.114.114
