accelerated-domains: add huoas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42610,6 +42610,7 @@ server=/huntkeydiy.com/114.114.114.114
 server=/huntsbot.com/114.114.114.114
 server=/hunuo.com/114.114.114.114
 server=/hunyinyiyuan.com/114.114.114.114
+server=/huoas.com/114.114.114.114
 server=/huoban.com/114.114.114.114
 server=/huobanbot.com/114.114.114.114
 server=/huobanhuyu.com/114.114.114.114
