accelerated-domains: add hwastro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42832,6 +42832,7 @@ server=/hwait.com/114.114.114.114
 server=/hwangda.com/114.114.114.114
 server=/hwashi.com/114.114.114.114
 server=/hwasmart.com/114.114.114.114
+server=/hwastro.com/114.114.114.114
 server=/hwasunpharma.com/114.114.114.114
 server=/hwbanaa.com/114.114.114.114
 server=/hwbaoan.com/114.114.114.114
