--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42836,6 +42836,7 @@ server=/hwait.com/114.114.114.114
 server=/hwangda.com/114.114.114.114
 server=/hwashi.com/114.114.114.114
 server=/hwasmart.com/114.114.114.114
+server=/hwastro.com/114.114.114.114
 server=/hwasunpharma.com/114.114.114.114
 server=/hwbanaa.com/114.114.114.114
 server=/hwbaoan.com/114.114.114.114
