--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42841,6 +42841,7 @@ server=/hwasunpharma.com/114.114.114.114
 server=/hwbanaa.com/114.114.114.114
 server=/hwbaoan.com/114.114.114.114
 server=/hwccpc.com/114.114.114.114
+server=/hwcdnsre.com/114.114.114.114
 server=/hwcloudlive.com/114.114.114.114
 server=/hwclouds-dns.com/114.114.114.114
 server=/hwclouds-dns.net/114.114.114.114
