--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42845,6 +42845,7 @@ server=/hwclouds.com/114.114.114.114
 server=/hwclouds.mobi/114.114.114.114
 server=/hwclouds.net/114.114.114.114
 server=/hwclouds.org/114.114.114.114
+server=/hwcloudsite.com/114.114.114.114
 server=/hwcpb.com/114.114.114.114
 server=/hwcrazy.com/114.114.114.114
 server=/hwehs.com/114.114.114.114
