accelerated-domains: add hweventgrid.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42850,6 +42850,7 @@ server=/hwcpb.com/114.114.114.114
 server=/hwcrazy.com/114.114.114.114
 server=/hwehs.com/114.114.114.114
 server=/hweimall.com/114.114.114.114
+server=/hweventgrid.com/114.114.114.114
 server=/hwfcw.com/114.114.114.114
 server=/hwgis.com/114.114.114.114
 server=/hwhidc.com/114.114.114.114
