--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42862,6 +42862,7 @@ server=/hwht.com/114.114.114.114
 server=/hwjyw.com/114.114.114.114
 server=/hwlifting.com/114.114.114.114
 server=/hwlpz.com/114.114.114.114
+server=/hwocloud.com/114.114.114.114
 server=/hworld.com/114.114.114.114
 server=/hwrecruit.com/114.114.114.114
 server=/hwshu.com/114.114.114.114
