--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42938,6 +42938,7 @@ server=/hxlbc.com/114.114.114.114
 server=/hxledu.com/114.114.114.114
 server=/hxljjt.com/114.114.114.114
 server=/hxlot.com/114.114.114.114
+server=/hxlover.com/114.114.114.114
 server=/hxlsw.com/114.114.114.114
 server=/hxltcj.com/114.114.114.114
 server=/hxlxx.com/114.114.114.114
