--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43041,6 +43041,7 @@ server=/hygxbgd.com/114.114.114.114
 server=/hygy361.com/114.114.114.114
 server=/hyham.com/114.114.114.114
 server=/hyhcdn.com/114.114.114.114
+server=/hyhfsj.com/114.114.114.114
 server=/hyhjzc.com/114.114.114.114
 server=/hyhl66.com/114.114.114.114
 server=/hyhro.com/114.114.114.114
