accelerated-domains: add hyhy2.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43047,6 +43047,7 @@ server=/hyhl66.com/114.114.114.114
 server=/hyhro.com/114.114.114.114
 server=/hyhuo.com/114.114.114.114
 server=/hyhy.cc/114.114.114.114
+server=/hyhy2.fun/114.114.114.114
 server=/hyhyn.com/114.114.114.114
 server=/hyilp.com/114.114.114.114
 server=/hyimmi.com/114.114.114.114
