--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43108,6 +43108,7 @@ server=/hytcshare.com/114.114.114.114
 server=/hytd.com/114.114.114.114
 server=/hytera.com/114.114.114.114
 server=/hytgj.com/114.114.114.114
+server=/hyth74.fun/114.114.114.114
 server=/hytzqb.com/114.114.114.114
 server=/hyundai-chhm.com/114.114.114.114
 server=/hyundai-hmtc.com/114.114.114.114
