--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43116,6 +43116,7 @@ server=/hyth74.fun/114.114.114.114
 server=/hytzqb.com/114.114.114.114
 server=/hyundai-chhm.com/114.114.114.114
 server=/hyundai-hmtc.com/114.114.114.114
+server=/hyunke.com/114.114.114.114
 server=/hyutyo.shop/114.114.114.114
 server=/hyuuhit.com/114.114.114.114
 server=/hyuvpw.com/114.114.114.114
