accelerated-domains: add hyxsoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43128,6 +43128,7 @@ server=/hyxcai.com/114.114.114.114
 server=/hyxiang888.xyz/114.114.114.114
 server=/hyxny888.com/114.114.114.114
 server=/hyxrmt.com/114.114.114.114
+server=/hyxsoft.com/114.114.114.114
 server=/hyy99.com/114.114.114.114
 server=/hyyf.net/114.114.114.114
 server=/hyyl.net/114.114.114.114
