--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43136,6 +43136,7 @@ server=/hyzcservice.com/114.114.114.114
 server=/hyzhcdn.com/114.114.114.114
 server=/hyznjs.com/114.114.114.114
 server=/hyzqxsb.com/114.114.114.114
+server=/hyzui.com/114.114.114.114
 server=/hz-alw.com/114.114.114.114
 server=/hz-etest.com/114.114.114.114
 server=/hz-expo.com/114.114.114.114
