--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43150,6 +43150,7 @@ server=/hz-jsyg.com/114.114.114.114
 server=/hz-medicine.com/114.114.114.114
 server=/hz-moon.com/114.114.114.114
 server=/hz-shoes.com/114.114.114.114
+server=/hz-sllace.com/114.114.114.114
 server=/hz-tire.com/114.114.114.114
 server=/hz-winone.com/114.114.114.114
 server=/hz-xin.com/114.114.114.114
