--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43320,6 +43320,7 @@ server=/hzrjkf.com/114.114.114.114
 server=/hzrobam.com/114.114.114.114
 server=/hzrsl.com/114.114.114.114
 server=/hzs2sc.com/114.114.114.114
+server=/hzs360.com/114.114.114.114
 server=/hzsaifang.com/114.114.114.114
 server=/hzsanjiaomao.com/114.114.114.114
 server=/hzsaso.com/114.114.114.114
