--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43525,6 +43525,7 @@ server=/iamxcb.com/114.114.114.114
 server=/iamxiaoming.net/114.114.114.114
 server=/iamxk.com/114.114.114.114
 server=/iandun.com/114.114.114.114
+server=/iangs.com/114.114.114.114
 server=/ianvisa.com/114.114.114.114
 server=/ianxing.com/114.114.114.114
 server=/iaocwbk.com/114.114.114.114
