--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43543,6 +43543,7 @@ server=/iartsee.com/114.114.114.114
 server=/iask-media.com/114.114.114.114
 server=/iask.com/114.114.114.114
 server=/iask.in/114.114.114.114
+server=/iaskbus.com/114.114.114.114
 server=/iaskgo.com/114.114.114.114
 server=/iasmr.cc/114.114.114.114
 server=/iat-auto.com/114.114.114.114
