--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43545,6 +43545,7 @@ server=/iask.com/114.114.114.114
 server=/iask.in/114.114.114.114
 server=/iaskbus.com/114.114.114.114
 server=/iaskgo.com/114.114.114.114
+server=/iaskhot.com/114.114.114.114
 server=/iasmr.cc/114.114.114.114
 server=/iat-auto.com/114.114.114.114
 server=/iauto.wang/114.114.114.114
