--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43684,6 +43684,7 @@ server=/icasiso.com/114.114.114.114
 server=/icastlewar.com/114.114.114.114
 server=/icax.org/114.114.114.114
 server=/icbc-at.com/114.114.114.114
+server=/icbc-cz.com/114.114.114.114
 server=/icbc-ltd.com/114.114.114.114
 server=/icbc-uk.com/114.114.114.114
 server=/icbc-us.com/114.114.114.114
