accelerated-domains: add ics-sec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43868,6 +43868,7 @@ server=/icqone.com/114.114.114.114
 server=/icrazyidea.com/114.114.114.114
 server=/icroom.com/114.114.114.114
 server=/icrosschina.com/114.114.114.114
+server=/ics-sec.com/114.114.114.114
 server=/icshanghai.com/114.114.114.114
 server=/icsisia.com/114.114.114.114
 server=/icslx.com/114.114.114.114
