accelerated-domains: add idaguang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43919,6 +43919,7 @@ server=/idachu.com/114.114.114.114
 server=/idacn.org/114.114.114.114
 server=/idadt.com/114.114.114.114
 server=/idafen.com/114.114.114.114
+server=/idaguang.com/114.114.114.114
 server=/idailycar.com/114.114.114.114
 server=/idaima.com/114.114.114.114
 server=/idanpianji.com/114.114.114.114
