--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44145,6 +44145,7 @@ server=/iepcn.com/114.114.114.114
 server=/iepose.com/114.114.114.114
 server=/ieppcn.com/114.114.114.114
 server=/ieqkypcq.com/114.114.114.114
+server=/ieryt111.fun/114.114.114.114
 server=/iesdouyin.com/114.114.114.114
 server=/iesdouyin.net/114.114.114.114
 server=/ieshs.com/114.114.114.114
