accelerated-domains: add ifactz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44167,6 +44167,7 @@ server=/if1f.com/114.114.114.114
 server=/ifabao.com/114.114.114.114
 server=/ifabiao.com/114.114.114.114
 server=/ifaclub.com/114.114.114.114
+server=/ifactz.com/114.114.114.114
 server=/ifanbei.com/114.114.114.114
 server=/ifangarden.com/114.114.114.114
 server=/ifangka.com/114.114.114.114
