--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44434,6 +44434,7 @@ server=/iicheese.com/114.114.114.114
 server=/iicp.net/114.114.114.114
 server=/iicz.cc/114.114.114.114
 server=/iidns.com/114.114.114.114
+server=/iiewl.com/114.114.114.114
 server=/iigs9.com/114.114.114.114
 server=/iigushi.com/114.114.114.114
 server=/iii80.com/114.114.114.114
