accelerated-domains: add inpetusgames.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45075,6 +45075,7 @@ server=/inoneh5.com/114.114.114.114
 server=/inoteexpress.com/114.114.114.114
 server=/inovance-automotive.com/114.114.114.114
 server=/inovogen.com/114.114.114.114
+server=/inpetusgames.com/114.114.114.114
 server=/inping.com/114.114.114.114
 server=/inpla.net/114.114.114.114
 server=/inplayable.com/114.114.114.114
