accelerated-domains: add ipbaohe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45285,6 +45285,7 @@ server=/ipapark.com/114.114.114.114
 server=/ipason.com/114.114.114.114
 server=/ipay.so/114.114.114.114
 server=/ipaylinks.com/114.114.114.114
+server=/ipbaohe.com/114.114.114.114
 server=/ipcelou.com/114.114.114.114
 server=/ipcfun.com/114.114.114.114
 server=/ipchaxun.com/114.114.114.114
