--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45486,6 +45486,7 @@ server=/irskj.com/114.114.114.114
 server=/irsnp.com/114.114.114.114
 server=/iruanmi.com/114.114.114.114
 server=/iruidian.com/114.114.114.114
+server=/iruik.com/114.114.114.114
 server=/iruixing.com/114.114.114.114
 server=/irukou.com/114.114.114.114
 server=/irunner.mobi/114.114.114.114
