--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45519,6 +45519,7 @@ server=/isf.ink/114.114.114.114
 server=/isfashion.com/114.114.114.114
 server=/isfirst.net/114.114.114.114
 server=/isgo.com/114.114.114.114
+server=/isgow.com/114.114.114.114
 server=/ish168.com/114.114.114.114
 server=/ishaanxi.com/114.114.114.114
 server=/ishaibiao.com/114.114.114.114
