accelerated-domains: add ispcache.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45611,6 +45611,7 @@ server=/isoying.com/114.114.114.114
 server=/isoyu.com/114.114.114.114
 server=/isozhijia.com/114.114.114.114
 server=/isp.cx/114.114.114.114
+server=/ispcache.net/114.114.114.114
 server=/ispecial.xyz/114.114.114.114
 server=/isrcb.com/114.114.114.114
 server=/isres.com/114.114.114.114
