--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45683,6 +45683,7 @@ server=/itaic.org/114.114.114.114
 server=/itailai.com/114.114.114.114
 server=/itaiping.com/114.114.114.114
 server=/itakeeasy.com/114.114.114.114
+server=/italentclc.com/114.114.114.114
 server=/italyvisacenterd.com/114.114.114.114
 server=/itamt.com/114.114.114.114
 server=/itangbole.com/114.114.114.114
