--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46036,6 +46036,7 @@ server=/ixh861.com/114.114.114.114
 server=/ixianlai.com/114.114.114.114
 server=/ixiaochengxu.cc/114.114.114.114
 server=/ixiatxt.com/114.114.114.114
+server=/ixiede.com/114.114.114.114
 server=/ixigua.com/114.114.114.114
 server=/ixiguan.com/114.114.114.114
 server=/ixiguavideo.com/114.114.114.114
