--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46075,6 +46075,7 @@ server=/ixy68.com/114.114.114.114
 server=/ixzzcgl.com/114.114.114.114
 server=/iy51.com/114.114.114.114
 server=/iyangxi.com/114.114.114.114
+server=/iyaos.com/114.114.114.114
 server=/iyaou.com/114.114.114.114
 server=/iyatt.com/114.114.114.114
 server=/iyawoqu.com/114.114.114.114
