accelerated-domains: add jab88.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46222,6 +46222,7 @@ server=/j9pic.com/114.114.114.114
 server=/ja-cloud.com/114.114.114.114
 server=/jaadee.com/114.114.114.114
 server=/jaadee.net/114.114.114.114
+server=/jab88.com/114.114.114.114
 server=/jabizb.com/114.114.114.114
 server=/jabrehoo.com/114.114.114.114
 server=/jaccsvn.com/114.114.114.114
