--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46698,6 +46698,7 @@ server=/jeremycn.com/114.114.114.114
 server=/jerrytom.xyz/114.114.114.114
 server=/jerryzou.com/114.114.114.114
 server=/jerust.com/114.114.114.114
+server=/jeryt111.fun/114.114.114.114
 server=/jescard.com/114.114.114.114
 server=/jesdatools.com/114.114.114.114
 server=/jesgoo.com/114.114.114.114
