--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46765,6 +46765,7 @@ server=/jfz.com/114.114.114.114
 server=/jfzhiyao.com/114.114.114.114
 server=/jg058.com/114.114.114.114
 server=/jg1060.com/114.114.114.114
+server=/jg1668.com/114.114.114.114
 server=/jg1994.com/114.114.114.114
 server=/jgcarbide.com/114.114.114.114
 server=/jgcgmb.com/114.114.114.114
