accelerated-domains: add jgstny.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46787,6 +46787,7 @@ server=/jglm.cc/114.114.114.114
 server=/jgs-ds.com/114.114.114.114
 server=/jgscct.com/114.114.114.114
 server=/jgsdaily.com/114.114.114.114
+server=/jgstny.com/114.114.114.114
 server=/jgtc315.com/114.114.114.114
 server=/jguanjia.com/114.114.114.114
 server=/jgums.com/114.114.114.114
