--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46797,6 +46797,7 @@ server=/jgxingyuan.com/114.114.114.114
 server=/jgxzy.com/114.114.114.114
 server=/jgy.com/114.114.114.114
 server=/jgyb.net/114.114.114.114
+server=/jgyee.com/114.114.114.114
 server=/jgyljt.com/114.114.114.114
 server=/jgyllh.com/114.114.114.114
 server=/jgyun.net/114.114.114.114
