accelerated-domains: add jiaas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46885,6 +46885,7 @@ server=/jia400.com/114.114.114.114
 server=/jia86.cc/114.114.114.114
 server=/jiaads.com/114.114.114.114
 server=/jiaapps.com/114.114.114.114
+server=/jiaas.com/114.114.114.114
 server=/jiabaiwang.net/114.114.114.114
 server=/jiabangcnc.com/114.114.114.114
 server=/jiabaoyuanlin.com/114.114.114.114
