--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47275,6 +47275,7 @@ server=/jiayans.net/114.114.114.114
 server=/jiayaw.com/114.114.114.114
 server=/jiayi56.com/114.114.114.114
 server=/jiayin618.com/114.114.114.114
+server=/jiayiss.com/114.114.114.114
 server=/jiayoujsq.com/114.114.114.114
 server=/jiayouxueba.com/114.114.114.114
 server=/jiayu.yoga/114.114.114.114
