accelerated-domains: add jieku.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47367,6 +47367,7 @@ server=/jiejingku.net/114.114.114.114
 server=/jiekenmould.com/114.114.114.114
 server=/jiekon.com/114.114.114.114
 server=/jiekou.ltd/114.114.114.114
+server=/jieku.com/114.114.114.114
 server=/jielibj.com/114.114.114.114
 server=/jieligo.net/114.114.114.114
 server=/jieling.net/114.114.114.114
