accelerated-domains: add jiepang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47386,6 +47386,7 @@ server=/jiemoselect.com/114.114.114.114
 server=/jienyl.com/114.114.114.114
 server=/jiepai.net/114.114.114.114
 server=/jiepaids.com/114.114.114.114
+server=/jiepang.com/114.114.114.114
 server=/jiepei.com/114.114.114.114
 server=/jieqi.com/114.114.114.114
 server=/jieqian.co/114.114.114.114
