--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47497,6 +47497,7 @@ server=/jilingwy.org/114.114.114.114
 server=/jilinmarathon.com/114.114.114.114
 server=/jilinwula.com/114.114.114.114
 server=/jilinxiangyun.com/114.114.114.114
+server=/jiliw.com/114.114.114.114
 server=/jiliyun.com/114.114.114.114
 server=/jilu.info/114.114.114.114
 server=/jiluchengshi.com/114.114.114.114
