--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48059,6 +48059,7 @@ server=/jiujiuyunhui.com/114.114.114.114
 server=/jiujiuzu.com/114.114.114.114
 server=/jiujun.net/114.114.114.114
 server=/jiujunqifu.com/114.114.114.114
+server=/jiujy5r3.fun/114.114.114.114
 server=/jiuku.cc/114.114.114.114
 server=/jiuku.com/114.114.114.114
 server=/jiuku.pw/114.114.114.114
