accelerated-domains: add jkkefv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48327,6 +48327,7 @@ server=/jkhealth.vip/114.114.114.114
 server=/jkimg.net/114.114.114.114
 server=/jkjiekuan.com/114.114.114.114
 server=/jkjzt.com/114.114.114.114
+server=/jkkefv.com/114.114.114.114
 server=/jkl6.com/114.114.114.114
 server=/jkllbd.com/114.114.114.114
 server=/jklsjm.com/114.114.114.114
