accelerated-domains: add jlminte.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48429,6 +48429,7 @@ server=/jlkja.com/114.114.114.114
 server=/jllihua.com/114.114.114.114
 server=/jlltxgbxyjy.com/114.114.114.114
 server=/jlmhw.com/114.114.114.114
+server=/jlminte.com/114.114.114.114
 server=/jlmuban.com/114.114.114.114
 server=/jlonline.com/114.114.114.114
 server=/jlpay.com/114.114.114.114
