--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48477,6 +48477,7 @@ server=/jmbbs.com/114.114.114.114
 server=/jmbloc.com/114.114.114.114
 server=/jmbon.com/114.114.114.114
 server=/jmbus.net/114.114.114.114
+server=/jmch12333.com/114.114.114.114
 server=/jmchn.com/114.114.114.114
 server=/jmd-china.com/114.114.114.114
 server=/jmd-leatherbag.com/114.114.114.114
