--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48569,6 +48569,7 @@ server=/jnhouse.com/114.114.114.114
 server=/jnhwcw.com/114.114.114.114
 server=/jnhxzc.com/114.114.114.114
 server=/jnhzxx.com/114.114.114.114
+server=/jnj-energy.com/114.114.114.114
 server=/jnjfwzhs.com/114.114.114.114
 server=/jnjingxin.com/114.114.114.114
 server=/jnjj.com/114.114.114.114
