--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48613,6 +48613,7 @@ server=/jnzongchi.com/114.114.114.114
 server=/jnzqcj.com/114.114.114.114
 server=/jnzwgzs.com/114.114.114.114
 server=/jnzycw.com/114.114.114.114
+server=/jo4.icu/114.114.114.114
 server=/jo43.com/114.114.114.114
 server=/joaquinchou.com/114.114.114.114
 server=/job0663.com/114.114.114.114
