accelerated-domains: add jojog.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48693,6 +48693,7 @@ server=/joinwaylawfirm.com/114.114.114.114
 server=/joinwee.com/114.114.114.114
 server=/joit.info/114.114.114.114
 server=/jojo000.vip/114.114.114.114
+server=/jojog.com/114.114.114.114
 server=/jojoread.com/114.114.114.114
 server=/jojoreading.com/114.114.114.114
 server=/jokecommunity.com/114.114.114.114
