--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48745,6 +48745,7 @@ server=/jovcloud.com/114.114.114.114
 server=/jovenindependiente.com/114.114.114.114
 server=/jovetech.com/114.114.114.114
 server=/jovision.com/114.114.114.114
+server=/jovisionai.com/114.114.114.114
 server=/jovmall.com/114.114.114.114
 server=/jowto.com/114.114.114.114
 server=/joy-air.com/114.114.114.114
