accelerated-domains: add jsncke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49104,6 +49104,7 @@ server=/jsmsg.com/114.114.114.114
 server=/jsmxkj.com/114.114.114.114
 server=/jsmxw.com/114.114.114.114
 server=/jsnaier.com/114.114.114.114
+server=/jsncke.com/114.114.114.114
 server=/jsnewexpo.com/114.114.114.114
 server=/jsningyi.com/114.114.114.114
 server=/jsnjjg.com/114.114.114.114
