accelerated-domains: add jufengputao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49372,6 +49372,7 @@ server=/jufaanli.com/114.114.114.114
 server=/jufair.com/114.114.114.114
 server=/jufeng313.com/114.114.114.114
 server=/jufengcompany.com/114.114.114.114
+server=/jufengputao.com/114.114.114.114
 server=/jufengshang.com/114.114.114.114
 server=/jufengwuxi.com/114.114.114.114
 server=/jufoinfo.com/114.114.114.114
