--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49380,6 +49380,7 @@ server=/jufengputao.com/114.114.114.114
 server=/jufengshang.com/114.114.114.114
 server=/jufengwuxi.com/114.114.114.114
 server=/jufoinfo.com/114.114.114.114
+server=/jugao.com/114.114.114.114
 server=/jugezi.com/114.114.114.114
 server=/jugongdan.com/114.114.114.114
 server=/juguang.com/114.114.114.114
