--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49392,6 +49392,7 @@ server=/juhaokan.org/114.114.114.114
 server=/juhaokanya.com/114.114.114.114
 server=/juhaom.com/114.114.114.114
 server=/juhe.com/114.114.114.114
+server=/juhepen.com/114.114.114.114
 server=/juheweb.com/114.114.114.114
 server=/juhomai.com/114.114.114.114
 server=/juhome.net/114.114.114.114
