accelerated-domains: add jushtong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49581,6 +49581,7 @@ server=/jushigj.com/114.114.114.114
 server=/jushihuikeji.com/114.114.114.114
 server=/jushikk.com/114.114.114.114
 server=/jushiwangedu.com/114.114.114.114
+server=/jushtong.com/114.114.114.114
 server=/jushuitan-inc.com/114.114.114.114
 server=/jushuitan.com/114.114.114.114
 server=/jushuitan.net/114.114.114.114
