accelerated-domains: add juzilm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49664,6 +49664,7 @@ server=/juzifenqi.com/114.114.114.114
 server=/juzijiudian.com/114.114.114.114
 server=/juzikong.com/114.114.114.114
 server=/juzilicai.com/114.114.114.114
+server=/juzilm.com/114.114.114.114
 server=/juzimi.cc/114.114.114.114
 server=/juzioo.com/114.114.114.114
 server=/juziseo.com/114.114.114.114
