--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49673,6 +49673,7 @@ server=/juzistore.com/114.114.114.114
 server=/juzisy.com/114.114.114.114
 server=/juzix.io/114.114.114.114
 server=/juzizhoutou.net/114.114.114.114
+server=/juzone.cc/114.114.114.114
 server=/juzzi-ec.com/114.114.114.114
 server=/jvbhotel.com/114.114.114.114
 server=/jvcxp.com/114.114.114.114
