accelerated-domains: add jx1999.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49722,6 +49722,7 @@ server=/jx139.com/114.114.114.114
 server=/jx163-cname.com/114.114.114.114
 server=/jx163.com/114.114.114.114
 server=/jx188.com/114.114.114.114
+server=/jx1999.com/114.114.114.114
 server=/jx366.xyz/114.114.114.114
 server=/jx3box.com/114.114.114.114
 server=/jx3mogu.com/114.114.114.114
