accelerated-domains: add jxbtl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49740,6 +49740,7 @@ server=/jxawe.org/114.114.114.114
 server=/jxbhwl.com/114.114.114.114
 server=/jxbond.com/114.114.114.114
 server=/jxbscbd.com/114.114.114.114
+server=/jxbtl.com/114.114.114.114
 server=/jxc4.com/114.114.114.114
 server=/jxcar.com/114.114.114.114
 server=/jxcat.com/114.114.114.114
