--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49898,6 +49898,7 @@ server=/jy.cc/114.114.114.114
 server=/jy0604.com/114.114.114.114
 server=/jy0832.com/114.114.114.114
 server=/jy135.com/114.114.114.114
+server=/jy147a.com/114.114.114.114
 server=/jy1991.com/114.114.114.114
 server=/jy391.com/114.114.114.114
 server=/jy510.com/114.114.114.114
