--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50051,6 +50051,7 @@ server=/jzhx.net/114.114.114.114
 server=/jzj2009.com/114.114.114.114
 server=/jzj9999.com/114.114.114.114
 server=/jzjgift.com/114.114.114.114
+server=/jzkapp.com/114.114.114.114
 server=/jzke.com/114.114.114.114
 server=/jzkelida.com/114.114.114.114
 server=/jzkjjt.com/114.114.114.114
