--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50152,6 +50152,7 @@ server=/kachecn.com/114.114.114.114
 server=/kacheren.com/114.114.114.114
 server=/kacper.fun/114.114.114.114
 server=/kada.com/114.114.114.114
+server=/kada163.com/114.114.114.114
 server=/kadang.com/114.114.114.114
 server=/kadesignllc.com/114.114.114.114
 server=/kadingding.com/114.114.114.114
