accelerated-domains: add kaifubiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50186,6 +50186,7 @@ server=/kaifaxueyuan.com/114.114.114.114
 server=/kaifayun.com/114.114.114.114
 server=/kaifu.com/114.114.114.114
 server=/kaifu1.com/114.114.114.114
+server=/kaifubiao.com/114.114.114.114
 server=/kaifubiao123.com/114.114.114.114
 server=/kaigao.com/114.114.114.114
 server=/kaige68.com/114.114.114.114
