accelerated-domains: add kankanlive.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50377,6 +50377,7 @@ server=/kankan.run/114.114.114.114
 server=/kankan365.cc/114.114.114.114
 server=/kankancity.com/114.114.114.114
 server=/kankanews.com/114.114.114.114
+server=/kankanlive.com/114.114.114.114
 server=/kankanmi.com/114.114.114.114
 server=/kankannews.com/114.114.114.114
 server=/kankanpiao.com/114.114.114.114
