--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50420,6 +50420,7 @@ server=/kanwz.net/114.114.114.114
 server=/kanxue.com/114.114.114.114
 server=/kanyihui.com/114.114.114.114
 server=/kanyijie.com/114.114.114.114
+server=/kanyouxi.com/114.114.114.114
 server=/kanyouxi.tv/114.114.114.114
 server=/kanzhekou.com/114.114.114.114
 server=/kanzhun.com/114.114.114.114
