accelerated-domains: add kbzs88.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50547,6 +50547,7 @@ server=/kbscloud.com/114.114.114.114
 server=/kbsml.com/114.114.114.114
 server=/kbw2018.com/114.114.114.114
 server=/kbyun.com/114.114.114.114
+server=/kbzs88.com/114.114.114.114
 server=/kc0011.net/114.114.114.114
 server=/kc87.com/114.114.114.114
 server=/kcbebank.com/114.114.114.114
