--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50592,6 +50592,7 @@ server=/kdclub.net/114.114.114.114
 server=/kdefu.com/114.114.114.114
 server=/kdf.ink/114.114.114.114
 server=/kdgjsf.com/114.114.114.114
+server=/kdieu.com/114.114.114.114
 server=/kdige.com/114.114.114.114
 server=/kdkefu.com/114.114.114.114
 server=/kdkh.com/114.114.114.114
