--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50616,6 +50616,7 @@ server=/ke.com/114.114.114.114
 server=/ke51.com/114.114.114.114
 server=/ke6.com/114.114.114.114
 server=/ke82.com/114.114.114.114
+server=/ke86.com/114.114.114.114
 server=/ke8u.com/114.114.114.114
 server=/keai.icu/114.114.114.114
 server=/keaiq.com/114.114.114.114
