accelerated-domains: add keqii.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50769,6 +50769,7 @@ server=/keovo.net/114.114.114.114
 server=/kepusky.com/114.114.114.114
 server=/keputech.com/114.114.114.114
 server=/kepuyanxue.com/114.114.114.114
+server=/keqii.com/114.114.114.114
 server=/kequcps.com/114.114.114.114
 server=/ker58.com/114.114.114.114
 server=/kercoras.com/114.114.114.114
