--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50793,6 +50793,7 @@ server=/kerundegroup.net/114.114.114.114
 server=/kerust.com/114.114.114.114
 server=/keruyun.com/114.114.114.114
 server=/keruyun.net/114.114.114.114
+server=/keryt111.fun/114.114.114.114
 server=/kesci.com/114.114.114.114
 server=/keshenwei.com/114.114.114.114
 server=/keshizhongguo.com/114.114.114.114
