accelerated-domains: add keytui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50843,6 +50843,7 @@ server=/keyray-hk.com/114.114.114.114
 server=/keyshot.cc/114.114.114.114
 server=/keyshot.pro/114.114.114.114
 server=/keytoix.vip/114.114.114.114
+server=/keytui.com/114.114.114.114
 server=/keyu66.com/114.114.114.114
 server=/keyuejiazheng.com/114.114.114.114
 server=/keyunchaxun.com/114.114.114.114
