accelerated-domains: add kfand.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50859,6 +50859,7 @@ server=/kf911.com/114.114.114.114
 server=/kf9977.com/114.114.114.114
 server=/kfadx.tech/114.114.114.114
 server=/kfagi.com/114.114.114.114
+server=/kfand.com/114.114.114.114
 server=/kfang.xin/114.114.114.114
 server=/kfb126.com/114.114.114.114
 server=/kfb163.com/114.114.114.114
