--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50869,6 +50869,7 @@ server=/kfcjrl.com/114.114.114.114
 server=/kfcms.com/114.114.114.114
 server=/kfd3sm2c.com/114.114.114.114
 server=/kfdcc.com/114.114.114.114
+server=/kfeiu.com/114.114.114.114
 server=/kffone.com/114.114.114.114
 server=/kfhome.com/114.114.114.114
 server=/kfhty.com/114.114.114.114
