accelerated-domains: add kffcww.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50870,6 +50870,7 @@ server=/kfcms.com/114.114.114.114
 server=/kfd3sm2c.com/114.114.114.114
 server=/kfdcc.com/114.114.114.114
 server=/kfeiu.com/114.114.114.114
+server=/kffcww.com/114.114.114.114
 server=/kffone.com/114.114.114.114
 server=/kfhome.com/114.114.114.114
 server=/kfhty.com/114.114.114.114
