accelerated-domains: add kjfhe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51069,6 +51069,7 @@ server=/kjcyfz.com/114.114.114.114
 server=/kjdb.org/114.114.114.114
 server=/kjdsnews.com/114.114.114.114
 server=/kjeport.com/114.114.114.114
+server=/kjfhe.com/114.114.114.114
 server=/kjfns.com/114.114.114.114
 server=/kjghyjy.com/114.114.114.114
 server=/kjhaoyun.com/114.114.114.114
