accelerated-domains: add kldmm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51179,6 +51179,7 @@ server=/klbn100.com/114.114.114.114
 server=/klchemicals.net/114.114.114.114
 server=/klclear.com/114.114.114.114
 server=/kldjy.com/114.114.114.114
+server=/kldmm.com/114.114.114.114
 server=/klhuyan.com/114.114.114.114
 server=/klianfa.com/114.114.114.114
 server=/klicen.com/114.114.114.114
