--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51175,6 +51175,7 @@ server=/klbn100.com/114.114.114.114
 server=/klchemicals.net/114.114.114.114
 server=/klclear.com/114.114.114.114
 server=/kldjy.com/114.114.114.114
+server=/kldmm.com/114.114.114.114
 server=/klhuyan.com/114.114.114.114
 server=/klianfa.com/114.114.114.114
 server=/klicen.com/114.114.114.114
