--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51188,6 +51188,7 @@ server=/klinlee.com/114.114.114.114
 server=/kliwu.com/114.114.114.114
 server=/kljiyou.com/114.114.114.114
 server=/kljtc.com/114.114.114.114
+server=/klkk66.fun/114.114.114.114
 server=/kllife.com/114.114.114.114
 server=/klmnf.com/114.114.114.114
 server=/klmy118114.com/114.114.114.114
