accelerated-domains: add koopei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51404,6 +51404,7 @@ server=/koolproxy.com/114.114.114.114
 server=/koolyun.com/114.114.114.114
 server=/koomao.com/114.114.114.114
 server=/koopass.com/114.114.114.114
+server=/koopei.com/114.114.114.114
 server=/koorun.com/114.114.114.114
 server=/kooshui.com/114.114.114.114
 server=/kooteam.com/114.114.114.114
