--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51480,6 +51480,7 @@ server=/kq81.com/114.114.114.114
 server=/kq88.com/114.114.114.114
 server=/kqapi.com/114.114.114.114
 server=/kqgeo.com/114.114.114.114
+server=/kqiaq.com/114.114.114.114
 server=/kqidong.com/114.114.114.114
 server=/kqj123.com/114.114.114.114
 server=/kqlink.com/114.114.114.114
