accelerated-domains: add kqjtj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51487,6 +51487,7 @@ server=/kqgeo.com/114.114.114.114
 server=/kqiaq.com/114.114.114.114
 server=/kqidong.com/114.114.114.114
 server=/kqj123.com/114.114.114.114
+server=/kqjtj.com/114.114.114.114
 server=/kqlink.com/114.114.114.114
 server=/kqmmm.com/114.114.114.114
 server=/kqqy.com/114.114.114.114
