--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51489,6 +51489,7 @@ server=/kqmmm.com/114.114.114.114
 server=/kqqy.com/114.114.114.114
 server=/kqw.com/114.114.114.114
 server=/kqwh231122.com/114.114.114.114
+server=/kqy1.com/114.114.114.114
 server=/kqzlzx.com/114.114.114.114
 server=/kqzp.net/114.114.114.114
 server=/kr-cell.com/114.114.114.114
