accelerated-domains: add ks-cdnv6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51516,6 +51516,7 @@ server=/krzb.net/114.114.114.114
 server=/krzzjn.com/114.114.114.114
 server=/ks-cdn.com/114.114.114.114
 server=/ks-cdn1.com/114.114.114.114
+server=/ks-cdnv6.com/114.114.114.114
 server=/ks-fag.com/114.114.114.114
 server=/ks-live.com/114.114.114.114
 server=/ks-spring.com/114.114.114.114
