--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51818,6 +51818,7 @@ server=/kuaizi.co/114.114.114.114
 server=/kuaizip.com/114.114.114.114
 server=/kuaizitech.com/114.114.114.114
 server=/kuaizitech.net/114.114.114.114
+server=/kuaizq.com/114.114.114.114
 server=/kuaizupu.com/114.114.114.114
 server=/kuaizy.com/114.114.114.114
 server=/kuajing.com/114.114.114.114
