accelerated-domains: add kumiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51934,6 +51934,7 @@ server=/kumanju.com/114.114.114.114
 server=/kumao.vip/114.114.114.114
 server=/kumaoyun.com/114.114.114.114
 server=/kumeiwp.com/114.114.114.114
+server=/kumiao.com/114.114.114.114
 server=/kumiao.vip/114.114.114.114
 server=/kumifeng.com/114.114.114.114
 server=/kun-pharm.com/114.114.114.114
