accelerated-domains: add kunlundns.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51952,6 +51952,7 @@ server=/kunlunar.com/114.114.114.114
 server=/kunlunca.com/114.114.114.114
 server=/kunluncan.com/114.114.114.114
 server=/kunlunce.com/114.114.114.114
+server=/kunlundns.com/114.114.114.114
 server=/kunlunea.com/114.114.114.114
 server=/kunlungem.com/114.114.114.114
 server=/kunlunger.com/114.114.114.114
