accelerated-domains: add kvhee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52054,6 +52054,7 @@ server=/kuzu.com/114.114.114.114
 server=/kv-kva.com/114.114.114.114
 server=/kvenjoy.com/114.114.114.114
 server=/kvfumdr.com/114.114.114.114
+server=/kvhee.com/114.114.114.114
 server=/kviso.com/114.114.114.114
 server=/kvogues.com/114.114.114.114
 server=/kvov.com/114.114.114.114
