--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52076,6 +52076,7 @@ server=/kwailbs.com/114.114.114.114
 server=/kwailine.com/114.114.114.114
 server=/kwailocallife.com/114.114.114.114
 server=/kwailocation.com/114.114.114.114
+server=/kwairr9aw56vso581r.com/114.114.114.114
 server=/kwairtc.com/114.114.114.114
 server=/kwaiselfcdn.com/114.114.114.114
 server=/kwaishop.com/114.114.114.114
