accelerated-domains: add lamwatch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52388,6 +52388,7 @@ server=/lamoton.com/114.114.114.114
 server=/lampouomo.com/114.114.114.114
 server=/lamsg.net/114.114.114.114
 server=/lamuba.com/114.114.114.114
+server=/lamwatch.com/114.114.114.114
 server=/lamyu.com/114.114.114.114
 server=/lan-bridge.com/114.114.114.114
 server=/lan-lin.com/114.114.114.114
