accelerated-domains: add legozu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53163,6 +53163,7 @@ server=/legendtkl.com/114.114.114.114
 server=/legion.com.hk/114.114.114.114
 server=/legou456.com/114.114.114.114
 server=/legowechat.com/114.114.114.114
+server=/legozu.com/114.114.114.114
 server=/legu.cc/114.114.114.114
 server=/legu168.com/114.114.114.114
 server=/leguelc.com/114.114.114.114
