--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53291,6 +53291,7 @@ server=/leniy.org/114.114.114.114
 server=/lenosoft.net/114.114.114.114
 server=/lenovator.com/114.114.114.114
 server=/lenovoconnect.com/114.114.114.114
+server=/lenovoeservice.com/114.114.114.114
 server=/lenovofile.com/114.114.114.114
 server=/lenovogame.com/114.114.114.114
 server=/lenovohci.com/114.114.114.114
