--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53348,6 +53348,7 @@ server=/lers168.com/114.114.114.114
 server=/lers168.net/114.114.114.114
 server=/lersang.com/114.114.114.114
 server=/lerye.com/114.114.114.114
+server=/leryt111.fun/114.114.114.114
 server=/lesejie.com/114.114.114.114
 server=/leshangzx.com/114.114.114.114
 server=/leshanvc.com/114.114.114.114
