accelerated-domains: add leshantangjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53351,6 +53351,7 @@ server=/lerye.com/114.114.114.114
 server=/leryt111.fun/114.114.114.114
 server=/lesejie.com/114.114.114.114
 server=/leshangzx.com/114.114.114.114
+server=/leshantangjt.com/114.114.114.114
 server=/leshanvc.com/114.114.114.114
 server=/leshi123.com/114.114.114.114
 server=/leshiguang.com/114.114.114.114
