--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53396,6 +53396,7 @@ server=/lettercloud.net/114.114.114.114
 server=/letuinet.com/114.114.114.114
 server=/letushu.com/114.114.114.114
 server=/letv.com/114.114.114.114
+server=/letv8.com/114.114.114.114
 server=/letvapp.net/114.114.114.114
 server=/letvcdn.com/114.114.114.114
 server=/letvcloud.com/114.114.114.114
