--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53801,6 +53801,7 @@ server=/licstar.net/114.114.114.114
 server=/lida100.com/114.114.114.114
 server=/lidakang.com/114.114.114.114
 server=/lideapower.com/114.114.114.114
+server=/lidebo.com/114.114.114.114
 server=/lidecheng.com/114.114.114.114
 server=/lidepower.com/114.114.114.114
 server=/lidianchizu.com/114.114.114.114
