--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53812,6 +53812,7 @@ server=/liebao.live/114.114.114.114
 server=/liebaoh5.com/114.114.114.114
 server=/liebaoidc.com/114.114.114.114
 server=/liebaopay.com/114.114.114.114
+server=/liebaovip.com/114.114.114.114
 server=/liebiao.com/114.114.114.114
 server=/liebigwatch.com/114.114.114.114
 server=/liechan.com/114.114.114.114
