--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53870,6 +53870,7 @@ server=/lifevccdn.com/114.114.114.114
 server=/lifeweeker.com/114.114.114.114
 server=/lifeyk.com/114.114.114.114
 server=/lifezb.com/114.114.114.114
+server=/liffmp.com/114.114.114.114
 server=/lifotronic.com/114.114.114.114
 server=/lifox.net/114.114.114.114
 server=/lifushop.com/114.114.114.114
