--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54386,6 +54386,7 @@ server=/liubaocha.com/114.114.114.114
 server=/liubo.live/114.114.114.114
 server=/liucao.vip/114.114.114.114
 server=/liuchengguanli.com/114.114.114.114
+server=/liuchengming.com/114.114.114.114
 server=/liuchengtu.com/114.114.114.114
 server=/liuchengtu.net/114.114.114.114
 server=/liuchuo.net/114.114.114.114
