--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54635,6 +54635,7 @@ server=/lj-group.com/114.114.114.114
 server=/lj168.com/114.114.114.114
 server=/ljbao.net/114.114.114.114
 server=/ljcdn.com/114.114.114.114
+server=/ljhks.com/114.114.114.114
 server=/ljia.com/114.114.114.114
 server=/ljia.net/114.114.114.114
 server=/ljimg.com/114.114.114.114
