accelerated-domains: add ljjhfw34.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54640,6 +54640,7 @@ server=/ljia.com/114.114.114.114
 server=/ljia.net/114.114.114.114
 server=/ljimg.com/114.114.114.114
 server=/ljjcyy.com/114.114.114.114
+server=/ljjhfw34.fun/114.114.114.114
 server=/ljjiaju.com/114.114.114.114
 server=/ljjlb.net/114.114.114.114
 server=/ljjq.com/114.114.114.114
