accelerated-domains: add lltckjyxgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54737,6 +54737,7 @@ server=/llsops.com/114.114.114.114
 server=/llsserver.com/114.114.114.114
 server=/llssite.com/114.114.114.114
 server=/llsttapp.com/114.114.114.114
+server=/lltckjyxgs.com/114.114.114.114
 server=/lltllt.com/114.114.114.114
 server=/lltoken.com/114.114.114.114
 server=/llttc.com/114.114.114.114
