--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54778,6 +54778,7 @@ server=/lmjx.net/114.114.114.114
 server=/lmjy.us/114.114.114.114
 server=/lmjzd.com/114.114.114.114
 server=/lmlc.com/114.114.114.114
+server=/lmlmvip.com/114.114.114.114
 server=/lmm8.com/114.114.114.114
 server=/lmnsaas.com/114.114.114.114
 server=/lmonkey.com/114.114.114.114
