--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54780,6 +54780,7 @@ server=/lmjzd.com/114.114.114.114
 server=/lmlc.com/114.114.114.114
 server=/lmlmvip.com/114.114.114.114
 server=/lmm8.com/114.114.114.114
+server=/lmmob.com/114.114.114.114
 server=/lmnsaas.com/114.114.114.114
 server=/lmonkey.com/114.114.114.114
 server=/lmqt.com/114.114.114.114
