--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54927,6 +54927,7 @@ server=/lohjs.com/114.114.114.114
 server=/loho88.com/114.114.114.114
 server=/lohu.info/114.114.114.114
 server=/loioo.com/114.114.114.114
+server=/loispp.com/114.114.114.114
 server=/loj.ac/114.114.114.114
 server=/loji.com/114.114.114.114
 server=/loke123.com/114.114.114.114
