accelerated-domains: add lolopool.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54953,6 +54953,7 @@ server=/lollipopo.com/114.114.114.114
 server=/lolmax.com/114.114.114.114
 server=/lolmf.com/114.114.114.114
 server=/lolmz.com/114.114.114.114
+server=/lolopool.com/114.114.114.114
 server=/lolphp.com/114.114.114.114
 server=/loltmall.com/114.114.114.114
 server=/lolxy.com/114.114.114.114
