--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55203,6 +55203,7 @@ server=/loveota.com/114.114.114.114
 server=/loveota.net/114.114.114.114
 server=/lovepd.com/114.114.114.114
 server=/loveroise.com/114.114.114.114
+server=/loverr.xyz/114.114.114.114
 server=/lovesec.com/114.114.114.114
 server=/loveshang.com/114.114.114.114
 server=/lovesoo.org/114.114.114.114
