accelerated-domains: add lpaoz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55222,6 +55222,7 @@ server=/loyi.net/114.114.114.114
 server=/loyo.cc/114.114.114.114
 server=/lp.fyi/114.114.114.114
 server=/lp1901.com/114.114.114.114
+server=/lpaoz.com/114.114.114.114
 server=/lpcheng.com/114.114.114.114
 server=/lpcues.com/114.114.114.114
 server=/lpetl.com/114.114.114.114
