--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55253,6 +55253,7 @@ server=/lq-bm.com/114.114.114.114
 server=/lq5u.com/114.114.114.114
 server=/lqaafgq.com/114.114.114.114
 server=/lqabr.com/114.114.114.114
+server=/lqalm.com/114.114.114.114
 server=/lqbby.com/114.114.114.114
 server=/lqbj.com/114.114.114.114
 server=/lqbj66.com/114.114.114.114
