--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55671,6 +55671,7 @@ server=/lutao.com/114.114.114.114
 server=/luteng888.com/114.114.114.114
 server=/lutongda.com/114.114.114.114
 server=/lutongnet.com/114.114.114.114
+server=/lutouwang.net/114.114.114.114
 server=/luunels.com/114.114.114.114
 server=/luv66.com/114.114.114.114
 server=/luwei.me/114.114.114.114
