--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56236,6 +56236,7 @@ server=/lzslgcj.com/114.114.114.114
 server=/lzslong.com/114.114.114.114
 server=/lzsmedia.com/114.114.114.114
 server=/lzsmxzy.com/114.114.114.114
+server=/lzspf.com/114.114.114.114
 server=/lzsq.net/114.114.114.114
 server=/lzsrsj.com/114.114.114.114
 server=/lzsunspot.com/114.114.114.114
