--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56336,6 +56336,7 @@ server=/m5stack.com/114.114.114.114
 server=/m6.run/114.114.114.114
 server=/m6690.top/114.114.114.114
 server=/m68mm.com/114.114.114.114
+server=/m7686d7aw5.com/114.114.114.114
 server=/m78.co/114.114.114.114
 server=/m7hwocyo67.com/114.114.114.114
 server=/m8.com/114.114.114.114
