accelerated-domains: add mall044.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56651,6 +56651,7 @@ server=/maliquankai.com/114.114.114.114
 server=/maliuliu.com/114.114.114.114
 server=/mall-builder.com/114.114.114.114
 server=/mall.com/114.114.114.114
+server=/mall044.com/114.114.114.114
 server=/mall109.com/114.114.114.114
 server=/mallchina.net/114.114.114.114
 server=/mallchina.org/114.114.114.114
