accelerated-domains: add mangjianghuole.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56714,6 +56714,7 @@ server=/mangg.com/114.114.114.114
 server=/mangguo.com/114.114.114.114
 server=/mangguo168.com/114.114.114.114
 server=/mangguonews.com/114.114.114.114
+server=/mangjianghuole.com/114.114.114.114
 server=/mangocity.com/114.114.114.114
 server=/mangoebike.com/114.114.114.114
 server=/mangoent.com/114.114.114.114
