--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56908,6 +56908,7 @@ server=/martech365.com/114.114.114.114
 server=/martin8023.com/114.114.114.114
 server=/martincl2.me/114.114.114.114
 server=/marto.cc/114.114.114.114
+server=/marvelunlimitedresources.com/114.114.114.114
 server=/maryek.net/114.114.114.114
 server=/mas-omkj.com/114.114.114.114
 server=/mas10010.com/114.114.114.114
