--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57419,6 +57419,7 @@ server=/meiliworks.com/114.114.114.114
 server=/meiliwu.com/114.114.114.114
 server=/meiljiaqi.com/114.114.114.114
 server=/meilunmeijia.com/114.114.114.114
+server=/meilunsc.com/114.114.114.114
 server=/meilvtong.com/114.114.114.114
 server=/meimeidu.com/114.114.114.114
 server=/meimeifa.com/114.114.114.114
