accelerated-domains: add meooe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57653,6 +57653,7 @@ server=/menww.com/114.114.114.114
 server=/menwww.com/114.114.114.114
 server=/menxue.com/114.114.114.114
 server=/menyuannews.com/114.114.114.114
+server=/meooe.com/114.114.114.114
 server=/meovse.com/114.114.114.114
 server=/meow.plus/114.114.114.114
 server=/meowcat.org/114.114.114.114
