accelerated-domains: add meryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57673,6 +57673,7 @@ server=/merkpd.com/114.114.114.114
 server=/merlinexh.com/114.114.114.114
 server=/mero-db.com/114.114.114.114
 server=/merroint.com/114.114.114.114
+server=/meryt111.fun/114.114.114.114
 server=/mescroll.com/114.114.114.114
 server=/mesdk.com/114.114.114.114
 server=/meshiot.com/114.114.114.114
