--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57807,6 +57807,7 @@ server=/mgsp.fun/114.114.114.114
 server=/mgszl.com/114.114.114.114
 server=/mgtv.com/114.114.114.114
 server=/mgw999.com/114.114.114.114
+server=/mgwcn.com/114.114.114.114
 server=/mgwxw.com/114.114.114.114
 server=/mgx3nu.com/114.114.114.114
 server=/mgxzsy.com/114.114.114.114
