--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57822,6 +57822,7 @@ server=/mhacn.net/114.114.114.114
 server=/mhaoma.com/114.114.114.114
 server=/mhbras.com/114.114.114.114
 server=/mhcharging.com/114.114.114.114
+server=/mhdlll.com/114.114.114.114
 server=/mhealth100.com/114.114.114.114
 server=/mhfotos.com/114.114.114.114
 server=/mhhf.com/114.114.114.114
