accelerated-domains: add mideaepayuat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58019,6 +58019,7 @@ server=/midea-buy.com/114.114.114.114
 server=/midea.com.tr/114.114.114.114
 server=/midea.com/114.114.114.114
 server=/mideadc.com/114.114.114.114
+server=/mideaepayuat.com/114.114.114.114
 server=/mideav.com/114.114.114.114
 server=/mideazy.com/114.114.114.114
 server=/midian.com/114.114.114.114
