accelerated-domains: add mifenlife.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58048,6 +58048,7 @@ server=/mifengvv.com/114.114.114.114
 server=/mifengxiuchang.com/114.114.114.114
 server=/mifengzd.com/114.114.114.114
 server=/mifengzhibo.com/114.114.114.114
+server=/mifenlife.com/114.114.114.114
 server=/mifispark.com/114.114.114.114
 server=/mifpay.com/114.114.114.114
 server=/mifwl.com/114.114.114.114
