accelerated-domains: add mingxigu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58278,6 +58278,7 @@ server=/mingtaokeji.com/114.114.114.114
 server=/mingtian.com/114.114.114.114
 server=/mingxf.com/114.114.114.114
 server=/mingxiaodd.com/114.114.114.114
+server=/mingxigu.com/114.114.114.114
 server=/mingxingbobbin.com/114.114.114.114
 server=/mingxingku.com/114.114.114.114
 server=/mingxinglai.com/114.114.114.114
