accelerated-domains: add mipujia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58383,6 +58383,7 @@ server=/miplus.cloud/114.114.114.114
 server=/mippaper.com/114.114.114.114
 server=/mipplan.com/114.114.114.114
 server=/mipplan.org/114.114.114.114
+server=/mipujia.com/114.114.114.114
 server=/mipuo.com/114.114.114.114
 server=/mipush.com/114.114.114.114
 server=/miqixuan.net/114.114.114.114
