accelerated-domains: add mkazanc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58529,6 +58529,7 @@ server=/mk-yiliao.com/114.114.114.114
 server=/mk2048.com/114.114.114.114
 server=/mk5.xyz/114.114.114.114
 server=/mkaq.org/114.114.114.114
+server=/mkazanc.com/114.114.114.114
 server=/mkb0898.com/114.114.114.114
 server=/mkdata.top/114.114.114.114
 server=/mkf.com/114.114.114.114
