accelerated-domains: add mmfusheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58640,6 +58640,7 @@ server=/mmeizu.com/114.114.114.114
 server=/mmfad.com/114.114.114.114
 server=/mmfang.cc/114.114.114.114
 server=/mmfj.com/114.114.114.114
+server=/mmfusheng.com/114.114.114.114
 server=/mmgl.net/114.114.114.114
 server=/mmgo.com/114.114.114.114
 server=/mmgogo.com/114.114.114.114
