--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58702,6 +58702,7 @@ server=/mnghjkiitik.cfd/114.114.114.114
 server=/mnihyc.com/114.114.114.114
 server=/mnjj.group/114.114.114.114
 server=/mnkan.com/114.114.114.114
+server=/mnnmnn.com/114.114.114.114
 server=/mnpc.net/114.114.114.114
 server=/mnptinibfbv.com/114.114.114.114
 server=/mnwww.com/114.114.114.114
