--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58744,6 +58744,7 @@ server=/mobgroupbuy.com/114.114.114.114
 server=/mobiapp.cloud/114.114.114.114
 server=/mobibao.com/114.114.114.114
 server=/mobibrw.com/114.114.114.114
+server=/mobifobi.com/114.114.114.114
 server=/mobike.com/114.114.114.114
 server=/mobile-ease.com/114.114.114.114
 server=/mobileanjian.com/114.114.114.114
