accelerated-domains: add modelones.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58804,6 +58804,7 @@ server=/modb.cc/114.114.114.114
 server=/modb.pro/114.114.114.114
 server=/modelarts-infer.com/114.114.114.114
 server=/modelevel.com/114.114.114.114
+server=/modelones.com/114.114.114.114
 server=/modelwhale.com/114.114.114.114
 server=/modeng178.com/114.114.114.114
 server=/modengtianshi.com/114.114.114.114
