--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58981,6 +58981,7 @@ server=/monfetch.com/114.114.114.114
 server=/mongac.com/114.114.114.114
 server=/monhun.fun/114.114.114.114
 server=/monidai.com/114.114.114.114
+server=/monidata.com/114.114.114.114
 server=/monknow.com/114.114.114.114
 server=/mono33.top/114.114.114.114
 server=/monolink.net/114.114.114.114
