accelerated-domains: add moquanad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59059,6 +59059,7 @@ server=/moqilin.net/114.114.114.114
 server=/moqing.com/114.114.114.114
 server=/moqipobing.com/114.114.114.114
 server=/moqu8.com/114.114.114.114
+server=/moquanad.com/114.114.114.114
 server=/moquseo.com/114.114.114.114
 server=/moraex.com/114.114.114.114
 server=/morange.shop/114.114.114.114
