accelerated-domains: add mvad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59548,6 +59548,7 @@ server=/muzijie.com/114.114.114.114
 server=/muzisoft.com/114.114.114.114
 server=/muziyueqiu.com/114.114.114.114
 server=/muzuhui.com/114.114.114.114
+server=/mvad.com/114.114.114.114
 server=/mvc188.com/114.114.114.114
 server=/mvcat.com/114.114.114.114
 server=/mvhere.com/114.114.114.114
