accelerated-domains: add mwjpk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59575,6 +59575,7 @@ server=/mwcloudcdn.info/114.114.114.114
 server=/mwcname.com/114.114.114.114
 server=/mweda.com/114.114.114.114
 server=/mwjournalchina.com/114.114.114.114
+server=/mwjpk.com/114.114.114.114
 server=/mwkhjc.com/114.114.114.114
 server=/mwm.moe/114.114.114.114
 server=/mwrf.net/114.114.114.114
