accelerated-domains: add mxeosbvt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59605,6 +59605,7 @@ server=/mxdmf.com/114.114.114.114
 server=/mxdraw.com/114.114.114.114
 server=/mxdraw3d.com/114.114.114.114
 server=/mxdzlk.com/114.114.114.114
+server=/mxeosbvt.com/114.114.114.114
 server=/mxew.com/114.114.114.114
 server=/mxguan.com/114.114.114.114
 server=/mxhaitao.com/114.114.114.114
