accelerated-domains: add neryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60575,6 +60575,7 @@ server=/nero-cn.com/114.114.114.114
 server=/nerocats.com/114.114.114.114
 server=/nerochat.com/114.114.114.114
 server=/nervepotato.com/114.114.114.114
+server=/neryt111.fun/114.114.114.114
 server=/nes-auto.com/114.114.114.114
 server=/nesbbs.com/114.114.114.114
 server=/nesox.com/114.114.114.114
