accelerated-domains: add neteasegame.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60611,6 +60611,7 @@ server=/netease-inc.com/114.114.114.114
 server=/netease.com/114.114.114.114
 server=/netease.im/114.114.114.114
 server=/neteasegame.com/114.114.114.114
+server=/neteasegame.net/114.114.114.114
 server=/neteasegames.com/114.114.114.114
 server=/netentsec.com/114.114.114.114
 server=/netesee.com/114.114.114.114
