accelerated-domains: add neteasegames.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60613,6 +60613,7 @@ server=/netease.im/114.114.114.114
 server=/neteasegame.com/114.114.114.114
 server=/neteasegame.net/114.114.114.114
 server=/neteasegames.com/114.114.114.114
+server=/neteasegames.net/114.114.114.114
 server=/netentsec.com/114.114.114.114
 server=/netesee.com/114.114.114.114
 server=/netflew.com/114.114.114.114
