accelerated-domains: add newxry.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60786,6 +60786,7 @@ server=/newvr.com/114.114.114.114
 server=/newwatchesale.com/114.114.114.114
 server=/newxing.com/114.114.114.114
 server=/newxitong.com/114.114.114.114
+server=/newxry.com/114.114.114.114
 server=/newxue.com/114.114.114.114
 server=/newyiben.com/114.114.114.114
 server=/newyorkluxurywatch.com/114.114.114.114
