accelerated-domains: add ni87.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60892,6 +60892,7 @@ server=/nhzb.com/114.114.114.114
 server=/nhzj.com/114.114.114.114
 server=/nhzs.com/114.114.114.114
 server=/ni8.com/114.114.114.114
+server=/ni87.com/114.114.114.114
 server=/ni93.com/114.114.114.114
 server=/nianbin.com/114.114.114.114
 server=/nianchu.net/114.114.114.114
