accelerated-domains: add ningbojipiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61019,6 +61019,7 @@ server=/ning0370.com/114.114.114.114
 server=/ningbo-airport.com/114.114.114.114
 server=/ningbocat.com/114.114.114.114
 server=/ningbofy.com/114.114.114.114
+server=/ningbojipiao.com/114.114.114.114
 server=/ningborunner.com/114.114.114.114
 server=/ningbotianxia.com/114.114.114.114
 server=/ningbotm.net/114.114.114.114
