accelerated-domains: add njjrlf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61251,6 +61251,7 @@ server=/njjiancai.com/114.114.114.114
 server=/njjn.com/114.114.114.114
 server=/njjrc.com/114.114.114.114
 server=/njjrkj.com/114.114.114.114
+server=/njjrlf.com/114.114.114.114
 server=/njjspzx.com/114.114.114.114
 server=/njjsxy.com/114.114.114.114
 server=/njjsyy.com/114.114.114.114
