accelerated-domains: add nndzsw1.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61549,6 +61549,7 @@ server=/nnduyi.com/114.114.114.114
 server=/nndwjc.com/114.114.114.114
 server=/nndya.com/114.114.114.114
 server=/nndylm.com/114.114.114.114
+server=/nndzsw1.com/114.114.114.114
 server=/nnedqp.com/114.114.114.114
 server=/nnedu.com/114.114.114.114
 server=/nnewn.com/114.114.114.114
