accelerated-domains: add nnfiy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61563,6 +61563,7 @@ server=/nnfcch.com/114.114.114.114
 server=/nnfcetyy.com/114.114.114.114
 server=/nnfcxx.com/114.114.114.114
 server=/nnfdys.com/114.114.114.114
+server=/nnfiy.com/114.114.114.114
 server=/nnflkyz.com/114.114.114.114
 server=/nnflzyyy.com/114.114.114.114
 server=/nnfsw.com/114.114.114.114
