accelerated-domains: add nqmoui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62085,6 +62085,7 @@ server=/npz.com/114.114.114.114
 server=/nq6.com/114.114.114.114
 server=/nqez.com/114.114.114.114
 server=/nqlai.com/114.114.114.114
+server=/nqmoui.com/114.114.114.114
 server=/nr-esc.com/114.114.114.114
 server=/nrb.cc/114.114.114.114
 server=/nrbbearing.com/114.114.114.114
