accelerated-domains: add nvwlm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62311,6 +62311,7 @@ server=/nvshengjie.com/114.114.114.114
 server=/nvshuyun.com/114.114.114.114
 server=/nvsip.com/114.114.114.114
 server=/nvwangg.com/114.114.114.114
+server=/nvwlm.com/114.114.114.114
 server=/nvwu.com/114.114.114.114
 server=/nvzhanshen.com/114.114.114.114
 server=/nvziwu.com/114.114.114.114
